applications/software/home1/droneci/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: drone
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "drone.yewolf.fr"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: drone
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
